[package]
name = "reaper-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
itertools = "0.12.0"
rusqlite = "0.30.0"
thiserror = "1.0.50"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[dev-dependencies]
insta = "1.34.0"
proptest = "1.4.0"
